# pyvereinsflieger

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyvereinsflieger/: __init__.py  client.py  totp.py
src/vereinsflieger/: client.py  exceptions.py  totp.py
tests/: conftest.py  test_client.py  test_totp.py
