[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vereinsflieger"
version = "0.1.0"
description = "Python REST client for the Vereinsflieger flight logbook API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Unicornlines" }]
keywords = ["vereinsflieger", "aviation", "flightlog", "rest", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vereinsflieger"]

[tool.hatch.build.targets.sdist]
include = [
    "src/vereinsflieger",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
